Fix routing and configuration for Vercel deployment

--- a/public/marais.html
+++ b/public/marais.html
@@ -18,8 +18,8 @@
         <li><a href="./servive.html">Services</a></li>
         <li><a href="./habitat.html" class="current-page">Habitats</a>
           <ul class="dropdown-content">
-            <li><a href="./savane.html" >Savane</a></li>
-            <li><a href="./marais.html"class="current-page">Marais</a></li>
+            <li><a href="./savane.html">Savane</a></li>
+            <li><a href="./marais.html" class="current-page">Marais</a></li>
             <li><a href="./ocean.html">Océan</a></li>
           </ul>
         </li>
@@ -35,73 +35,60 @@
         <h1>Marais</h1>
         <p>Explorez les mystères des marais et rencontrez quelques-uns de leurs habitants captivants.</p>
       </div>
-      
+
       <video autoplay muted loop class="marais-hero-video">
         <source src="./images/marais.mp4" type="video/mp4">
       </video>
     </section>
 
     <section class="marais-details">
-        <div class="marais-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/crocodile.mp4" type="video/mp4">
-          </video>
-          <div class="marais-item-text">
-            <h2>Prénom: Croco</h2>
-            <h3>Race: Crocodile</h3>
-            <h4>Habitat: Marais</h4>
-            <p>Croco est un prédateur redoutable des marais, connu pour sa force et sa discrétion.</p>
-          </div>
+      <div class="marais-item">
+        <img src="./images/croco.jpg" alt="Crocodile" width="100%" height="auto">
+        <div class="marais-item-text">
+          <h2>Prénom: Croco</h2>
+          <h3>Race: Crocodile</h3>
+          <h4>Habitat: Marais</h4>
+          <p>Croco est un prédateur redoutable des marais, connu pour sa force et sa discrétion.</p>
         </div>
-        <div class="marais-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/frog.mp4" type="video/mp4">
-          </video>
-          <div class="marais-item-text">
-            <h2>Prénom: Froggy</h2>
-            <h3>Race: Grenouille</h3>
-            <h4>Habitat: Marais</h4>
-            <p>Froggy est connue pour ses sauts impressionnants et son chant distinctif.</p>
-          </div>
+      </div>
+      <div class="marais-item">
+        <img src="./images/frog.jpg" alt="Grenouille" width="100%" height="auto">
+        <div class="marais-item-text">
+          <h2>Prénom: Froggy</h2>
+          <h3>Race: Grenouille</h3>
+          <h4>Habitat: Marais</h4>
+          <p>Froggy est connue pour ses sauts impressionnants et son chant distinctif.</p>
         </div>
-        <div class="marais-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/hippo.mp4" type="video/mp4">
-          </video>
-          <div class="marais-item-text">
-            <h2>Prénom: Hippo</h2>
-            <h3>Race: Hippopotame</h3>
-            <h4>Habitat: Marais</h4>
-            <p>Hippo est un géant des marais, souvent aperçu se prélassant dans l'eau.</p>
-          </div>
+      </div>
+      <div class="marais-item">
+        <img src="./images/hippo.jpg" alt="Hippopotame" width="100%" height="auto">
+        <div class="marais-item-text">
+          <h2>Prénom: Hippo</h2>
+          <h3>Race: Hippopotame</h3>
+          <h4>Habitat: Marais</h4>
+          <p>Hippo est un géant des marais, souvent aperçu se prélassant dans l'eau.</p>
         </div>
-        <div class="marais-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/serpent.mp4" type="video/mp4">
-
-          </video>
-          <div class="marais-item-text">
-            <h2>Prénom: Slinky</h2>
-            <h3>Race: Serpent</h3>
-            <h4>Habitat: Marais</h4>
-            <p>Slinky est un serpent agile, expert en camouflage parmi les roseaux.</p>
-          </div>
+      </div>
+      <div class="marais-item">
+        <img src="./images/serpent.webp" alt="Serpent" width="100%" height="auto">
+        <div class="marais-item-text">
+          <h2>Prénom: Slinky</h2>
+          <h3>Race: Serpent</h3>
+          <h4>Habitat: Marais</h4>
+          <p>Slinky est un serpent agile, expert en camouflage parmi les roseaux.</p>
         </div>
-        <div class="marais-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/tortue.mp4" type="video/mp4">
-          </video>
-          <div class="marais-item-text">
-            <h2>Prénom: Shelly</h2>
-            <h3>Race: Tortue</h3>
-            <h4>Habitat: Marais</h4>
-            <p>Shelly est une tortue paisible, souvent vue en train de nager lentement dans les eaux calmes.</p>
-          </div>
+      </div>
+      <div class="marais-item">
+        <img src="./images/tortue marais.jpg" alt="Tortue" width="100%" height="auto">
+        <div class="marais-item-text">
+          <h2>Prénom: Shelly</h2>
+          <h3>Race: Tortue</h3>
+          <h4>Habitat: Marais</h4>
+          <p>Shelly est une tortue paisible, souvent vue en train de nager lentement dans les eaux calmes.</p>
         </div>
-      </section>
+      </div>
+    </section>
   </main>
-
-
 
   <footer>
     <div class="footer-container">
