--- a/public/ocean.html
+++ b/public/ocean.html
@@ -18,9 +18,9 @@
         <li><a href="./servive.html">Services</a></li>
         <li><a href="./habitat.html" class="current-page">Habitats</a>
           <ul class="dropdown-content">
-            <li><a href="./savane.html" >Savane</a></li>
-            <li><a href="./marais.html"  >Marais</a></li>
-            <li><a href="./ocean.html"class="current-page">Océan</a></li>
+            <li><a href="./savane.html">Savane</a></li>
+            <li><a href="./marais.html">Marais</a></li>
+            <li><a href="./ocean.html" class="current-page">Océan</a></li>
           </ul>
         </li>
         <li><a href="./contact.html">Contact</a></li>
@@ -35,73 +35,59 @@
         <h1>Océan</h1>
         <p>Plongez dans notre aquarium et découvrez la richesse de la vie marine.</p>
       </div>
+
       <video autoplay muted loop class="ocean-hero-video">
         <source src="./images/ocean.mp4" type="video/mp4">
-    </video>
+      </video>
     </section>
 
     <section class="ocean-details">
-        <div class="ocean-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/requin.mp4" type="video/mp4">
-          </video>
-          <div class="ocean-item-text">
-            <h2>Prénom: Sharky</h2>
-            <h3>Race: Requin</h3>
-            <h4>Habitat: Océan</h4>
-            <p>Sharky est un des prédateurs les plus redoutés des océans, avec sa nage rapide et ses dents acérées.</p>
-          </div>
+      <div class="ocean-item">
+        <img src="./images/requin.jpg" alt="Requin" width="100%" height="auto">
+        <div class="ocean-item-text">
+          <h2>Prénom: Sharky</h2>
+          <h3>Race: Requin</h3>
+          <h4>Habitat: Océan</h4>
+          <p>Sharky est un des prédateurs les plus redoutés des océans, avec sa nage rapide et ses dents acérées.</p>
         </div>
-        <div class="ocean-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/tortuemer.mp4" type="video/mp4">
-          </video>
-          <div class="ocean-item-text">
-            <h2>Prénom: Shelly</h2>
-            <h3>Race: Tortue de mer</h3>
-            <h4>Habitat: Océan</h4>
-            <p>Shelly est une tortue de mer gracieuse, connue pour sa longue durée de vie et ses voyages à travers les océans.</p>
-          </div>
+      </div>
+      <div class="ocean-item">
+        <img src="./images/tortuemer.jpg" alt="Tortue de mer" width="100%" height="auto">
+        <div class="ocean-item-text">
+          <h2>Prénom: Shelly</h2>
+          <h3>Race: Tortue de mer</h3>
+          <h4>Habitat: Océan</h4>
+          <p>Shelly est une tortue de mer gracieuse, connue pour sa longue durée de vie et ses voyages à travers les océans.</p>
         </div>
-        <div class="ocean-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/poisson.mp4" type="video/mp4">
-          </video>
-          <div class="ocean-item-text">
-            <h2>Prénom: Nemo</h2>
-            <h3>Race: Poisson-clown</h3>
-            <h4>Habitat: Océan</h4>
-            <p>Nemo est un poisson-clown coloré, populaire pour sa symbiose avec les anémones de mer.</p>
-          </div>
+      </div>
+      <div class="ocean-item">
+        <img src="./images/poisson.jpg" alt="Poisson-clown" width="100%" height="auto">
+        <div class="ocean-item-text">
+          <h2>Prénom: Nemo</h2>
+          <h3>Race: Poisson-clown</h3>
+          <h4>Habitat: Océan</h4>
+          <p>Nemo est un poisson-clown coloré, populaire pour sa symbiose avec les anémones de mer.</p>
         </div>
-        <div class="ocean-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/meduse.mp4" type="video/mp4">
-          </video>
-          <div class="ocean-item-text">
-            <h2>Prénom: Jellie</h2>
-            <h3>Race: Méduse</h3>
-            <h4>Habitat: Océan</h4>
-            <p>Jellie est une méduse fascinante, avec son corps translucide et ses tentacules urticants.</p>
-          </div>
+      </div>
+      <div class="ocean-item">
+        <img src="./images/meduse.jpg" alt="Méduse" width="100%" height="auto">
+        <div class="ocean-item-text">
+          <h2>Prénom: Jellie</h2>
+          <h3>Race: Méduse</h3>
+          <h4>Habitat: Océan</h4>
+          <p>Jellie est une méduse fascinante, avec son corps translucide et ses tentacules urticants.</p>
         </div>
-        <div class="ocean-item">
-          <video width="100%" height="auto" controls>
-            <source src="./images/dauphin.mp4" type="video/mp4">
-          </video>
-          <div class="ocean-item-text">
-            <h2>Prénom: Flipper</h2>
-            <h3>Race: Dauphin</h3>
-            <h4>Habitat: Océan</h4>
-            <p>Flipper est un dauphin joueur, reconnu pour son intelligence et ses sauts spectaculaires.</p>
-          </div>
+      </div>
+      <div class="ocean-item">
+        <img src="./images/dauphin.jpg" alt="Dauphin" width="100%" height="auto">
+        <div class="ocean-item-text">
+          <h2>Prénom: Flipper</h2>
+          <h3>Race: Dauphin</h4>
+          <p>Flipper est un dauphin joueur, reconnu pour son intelligence et ses sauts spectaculaires.</p>
         </div>
-      </section>
-
-
+      </div>
+    </section>
   </main>
-
-
 
   <footer>
     <div class="footer-container">
