--- a/public/savane.html
+++ b/public/savane.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="logo">
-      <p id="logo"><img src=".images/logo.png" alt="Zoo d'Arcadie">ZOO D'ARCADIA</p>
+      <p id="logo"><img src="./images/logo.png" alt="Zoo d'Arcadie">ZOO D'ARCADIA</p>
     </div>
     <nav>
       <ul>
@@ -39,15 +39,11 @@
       <video autoplay muted loop class="savane-hero-video">
         <source src="./images/savane.mp4" type="video/mp4">
       </video>
-
     </section>
 
     <section class="savane-details">
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/lion.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/lion.jpg" alt="Lion" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Simba</h2>
           <h3>Race: Lion</h3>
@@ -56,10 +52,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/elephant.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/elephant.jpg" alt="Éléphant" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Dumbo</h2>
           <h3>Race: Éléphant</h3>
@@ -68,10 +61,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/girafe.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/geraldine.jpg" alt="Girafe" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Geraldine</h2>
           <h3>Race: Girafe</h3>
@@ -80,10 +70,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/zebre.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/zebra.jpg" alt="Zèbre" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Marty</h2>
           <h3>Race: Zèbre</h3>
@@ -92,10 +79,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/guepard.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/guepard.jpg" alt="Guépard" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Flash</h2>
           <h3>Race: Guépard</h3>
@@ -104,10 +88,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/hyene.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/hyene.jpg" alt="Hyène" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Shenzi</h2>
           <h3>Race: Hyène</h3>
@@ -116,10 +97,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/rhino.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/rhino.jpg" alt="Rhinocéros" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Rocko</h2>
           <h3>Race: Rhinocéros</h3>
@@ -128,10 +106,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/autruche.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/autruche.jpg" alt="Autruche" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Speedy</h2>
           <h3>Race: Autruche</h3>
@@ -140,10 +115,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/gazelle.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/gazelle.jpg" alt="Gazelle" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Gazzy</h2>
           <h3>Race: Gazelle</h3>
@@ -152,10 +124,7 @@
         </div>
       </div>
       <div class="savane-item">
-        <video width="100%" height="auto" controls>
-          <source src="./images/bison.mp4" type="video/mp4">
-          Votre navigateur ne supporte pas la vidéo.
-        </video>
+        <img src="./images/buffle.jpg" alt="Buffle" width="100%" height="auto">
         <div class="savane-item-text">
           <h2>Prénom: Bison</h2>
           <h3>Race: Buffle</h3>
@@ -165,8 +134,6 @@
       </div>
     </section>
   </main>
-
-
 
   <footer>
     <div class="footer-container">
